# imgui-opengl-glfw-glew-cmake-demo

./: .gitignore  CMakeLists.txt  README.md  imgui_impl_glfw_gl3.cpp  main.cpp
common/: CMakeLists.txt
data/shader/: coord.frag  coord.vert  matrix.vert  texture.frag  texture.vert
dependency/glm/: CMakeLists.txt
exec/: control.cpp  coord.cpp  matrix.cpp  mixTexture.cpp  template.cpp  texture.cpp  triangle.cpp
imgui/: CMakeLists.txt
inc/: camera.h  shader.h
